# pipenv

./: .deepsource.toml  .dockerignore  .editorconfig  .env  .envrc  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  CHANGELOG.draft.rst  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  Dockerfile.tests  HISTORY.txt  LICENSE  LICENSES  MANIFEST.in  Makefile  NOTICES  Pipfile  Pipfile.freeze  README.md  README.rst  README_es.rst  RELEASING.md  SECURITY.md  appveyor.yml  azure-pipelines.yml  codecov.yml  delegator.py  dist.Dockerfile  docker-compose.yml  (+20 more)
.azure-pipelines/: docs.yml  linux.yml  windows.yml
.azure-pipelines/jobs/: run-manifest-check.yml  run-tests-windows.yml  run-tests.yml  run-vendor-scripts.yml  test.yml
.azure-pipelines/scripts/: New-Ramdisk.ps1
.azure-pipelines/steps/: DistributeTests.ps1  build-package.yml  create-virtualenv-linux.yml  create-virtualenv-windows.yml  create-virtualenv.yml  install-dependencies.yml  reinstall-pythons.yml  run-tests-linux.yml  run-tests-windows.yml  run-tests.yml  run-vendor-scripts.yml
.buildkite/: pipeline.yml  project.json
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Bug_report.md  Custom.md  Feature_request.md
.github/workflows/: changelog.yml  ci.yaml  pypi_upload.yml  ruff.yml  test.yml
.vsts-ci/: docs.yml  linux.yml  windows.yml
.vsts-ci/phases/: run-manifest-check.yml  run-tests.yml  run-vendor-scripts.yml  test.yml
.vsts-ci/steps/: create-virtualenv.yml  install-dependencies.yml  run-tests.yml
_pipfile/: api.py
benchmarks/: .gitignore  Pipfile  README.md  benchmark.py
bug/: Pipfile
debian/: changelog  control  rules
debian/source/: options
docker/: Dockerfile  Makefile  README.md
docs/: Makefile  advanced.md  advanced.rst  basics.rst  best_practices.md  changelog.md  changelog.rst  cli.md  cli.rst  commands.md  commands.rst  conf.py  configuration.md  credentials.md  diagnose.md  diagnose.rst  docker.md  docker.rst  faq.md  index.md  index.rst  indexes.md  install.rst  installation.md  installation.rst  locking.md  make.bat  migrating.md  pipfile.md  pipfile.rst  pylock.md  quick_start.md  quickstart.md  quickstart.rst  requirements.txt  scripts.md  security.md  shell.md  shell.rst  specifiers.md  (+6 more)
docs/_static/: custom.css  konami.js
docs/_templates/: hacks.html  sidebarintro.html  sidebarlogo.html
docs/dev/: contributing.md  contributing.rst  indexes.md  initiative-a-inventory.md  initiative-b-triage-fileutils.md  initiative-b-triage-markers.md  initiative-b-triage-requirements.md  initiative-b-triage-requirementslib.md  initiative-b-triage.md  initiative-c-design.md  initiative-c-params.md  initiative-d-inventory.md  initiative-e-design.md  initiative-f-backends-design.md  initiative-f-execution-plan.md  initiative-f-protocol.md  initiative-f-typed-design.md  initiative-g-phase3-design.md  initiative-g-pure-python-design.md  modernization-plan.md  modernization-prd.md  philosophy.rst  swarm-ops.md
examples/: Pipfile  Pipfile.with_pylock  pylock.toml
examples/plugin/: pipenv_hello.py  setup.py
news/: #4959.feature  +bump-plette.vendor.rst  +cool-down-period.feature.rst  +initiative-a-is-valid-url.removal.rst  +initiative-b-prepare-pip-source-args.trivial.rst  +install-drop-redundant-upgrade-flag.behavior.rst  +install-parallel-wheel-prefetch.feature.rst  +pep423-name-scheme-guard.bugfix.rst  +pipfile-recase-opt-in.behavior.rst  +pure-python-extras-roundtrip.bugfix.rst  +pure-python-prerelease-parity.bugfix.rst  +pure-python-sdist-build-isolation.feature.rst  +resolver-subprocess-timeout.behavior.rst  1234-doc-conversion-from-rst-to-md.md  1393.bugfix  1690.bugfix  1861.feature  1901.bugfix  1977.feature.rst  2123.behavior  2123.bugfix  2142.bugfix  2161.bugfix  2167.feature  2168.feature  2173.bugfix  2181.bugfix  2184.trivial  2193.vendor  2194.docs  2198.bugfix  2199.feature  2200.feature.rst  2205.doc  2209.bugfix  2215.docs  2248.docs  2255.feature  2262.bugfix  2267.bugfix  (+826 more)
peeps/: PEEP-000.md  PEEP-0004.md  PEEP-001.md  PEEP-002.md  PEEP-003.md  PEEP-004.md  PEEP-005.md  PEEP-006.md  PEEP-007.md  PEEP-044.md  PEEP-TEMPLATE.md  Specify Alternate Index for dev
pipenv/: 5556.removal.rst  __init__.py  __main__.py  __version__.py  _compat.py  _types.py  cache.py  cli.py  cmdparse.py  core.py  delegator.py  environment.py  environments.py  envload.py  exceptions.py  exclude.py  exclude_usage.txt  help.py  installers.py  pep508checker.py  pep508checker.ts  pipenv.1  plugin_manager.py  process.py  progress.py  project.py  pyenv.py  pythonfinder.py  requirements.py  resolver.py  runner.py  setuptools.py  shells.py  test_script.py  utils.py  uv.py  uv_lock.py  venv.py
pipenv/_pipfile/: __about__.py  _json.py  api.py
pipenv/_types/: pipfile2.py
pipenv/cli/: __init__.py  command.py  options.py  parser.py
pipenv/operations/: _install.py  _utils.py  check.py  clean.py  ensure.py  ensure_python.py  (+14 more)
pipfile/: __about__.py  __init__.py
tasks/: __init__.py  release.py
test_windows/: test_basic.py  test_pipenv.py  test_utils.py
tests/: conftest.py  requirements_django.txt  requirements_egg.txt  requirements_requests.txt  requirements_requests_socks.txt  test_cmdparse.py  test_dot_venv.py  test_install_markers.py  test_install_twists.py  test_legacy.py  test_pipenv.py  test_project.py  test_requirements.py  test_run.py  test_utils.py  test_vendor.py  test_windows.py
tests/fixtures/cython-import-package/: pyproject.toml  setup.cfg  setup.py
tests/fixtures/fake-package/: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  appveyor.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
tests/fixtures/fake-package/docs/: conf.py
tests/fixtures/fake-package/src/fake_package/: __init__.py
tests/fixtures/fake-package/tasks/: CHANGELOG.rst.jinja2  __init__.py
tests/fixtures/legacy-backend-package/: pyproject.toml  setup.cfg  setup.py
(+1184 files in other folders)
