[metadata]
long_description = file: README.md
license = MIT
license_file = LICENSE

[flake8]
exclude = .git,__pycache__,docs/,pipenv/vendor/,get-pipenv.py,setup.py
ignore =
    # The default ignore list:
    E121,E123,E126,E226,E24,E704,
    # Our additions:
    # E127: continuation line over-indented for visual indent
    # E128: continuation line under-indented for visual indent
    # E129: visually indented line with same indent as next logical line
    # E222: multiple spaces after operator
    # E231: missing whitespace after ','
    # E402: module level import not at top of file
    # E501: line too long
    # W503: line break before binary operator
    E402,E501,W503

[isort]
atomic=true
lines_after_imports=2
lines_between_types=1
multi_line_output=5
not_skip=__init__.py
known_first_party =
    pipenv
    tests
ignore_trailing_comma=true

[mypy]
ignore_missing_imports=true
follow_imports=skip
html_report=mypyhtml
python_version=3.6
mypy_path=typeshed/pyi:typeshed/imports
