[metadata]
long_description = file: README.md
license = MIT
license_files = LICENSE

# Currently flake8 does not support pyproject.toml
[flake8]
extend-exclude =
    docs/,
    pipenv/vendor/,
    pipenv/patched/,
    get-pipenv.py,
    setup.py,
    tests/fixtures/,
    tests/test_artifacts/
ignore =
    # The default ignore list:
    E121,E123,E126,E226,E24,E704,
    # Our additions:
    # E127: continuation line over-indented for visual indent
    # E128: continuation line under-indented for visual indent
    # E129: visually indented line with same indent as next logical line
    # E222: multiple spaces after operator
    # E231: missing whitespace after ','
    # E402: module level import not at top of file
    # E501: line too long
    # W503: line break before binary operator
    E402,E501,W503,E203

[coverage:run]
parallel = true

[bdist_wheel]
universal = 1
