[metadata]
name = pipenv
author = Pipenv maintainer team
author_email = distutils-sig@python.org
description = Python Development Workflow for Humans.
url = https://github.com/pypa/pipenv
version = attr: pipenv.__VERSION__
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[coverage:run]
parallel = true

[options]
packages = find:
package_dir=
    =pipenv
zip_safe = True
setup_requires =
install_requires =
    certifi
    setuptools>=67.0.0
    virtualenv>=20.24.2
include_package_data = True
python_requires = >=3.7

[options.packages.find]
exclude = tests; tests.*; tasks; tasks.*

[options.entry_points]
console_scripts =
    pipenv=pipenv:cli
    pipenv-resolver=pipenv.resolver:main

[options.extras_require]
dev =
    beautifulsoup4
    black==23.3.0
    flake8>=3.3.0,<4.0
    invoke
    parver
    sphinx
    towncrier
tests =
    flaky
    mock
    pytest-timeout
    pytest-xdist
    pytest>=5.0

[options.package_data]
 = LICENSE; NOTICES
pipenv.patched.pip._vendor.certifi = *.pem
pipenv.patched.pip._vendor.distlib = t32.exe; t64.exe; w32.exe; w64.exe
pipenv.patched.pip._vendor.distlib._backport = sysconfig.cfg
pipenv.patched.pip._vendor.requests = *.pem
pipenv.patched.safety = VERSION; safety-policy-template.yml
pipenv.vendor.ruamel = yaml
